--- a/themes/hackspace/layout/index.ejs
+++ b/themes/hackspace/layout/index.ejs
@@ -1,35 +1,24 @@
 <section id="about">
   <% if (config.description) { %>
+    <h1>Introduction</h1>
     <%- markdown(config.description) %>
   <% } %>
-  <% if (theme.social_links) { %>
-    <p>
-      <%= __('index.find_me_on') %>
-      <% var nb_links = Object.keys(theme.social_links).length %>
-      <% var i = 0 %>
-      <% for(var link in theme.social_links) { %>
-        <% if (link == 'mail') { %>
-          <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
-            <i class="fas fa-envelope"></i><!--
-      ---></a>
-        <% } else if (link == 'rss') { %>
-          <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
-            <i class="fas fa-rss"></i>
-          </a>
-        <% } else { %>
-          <a class="icon" target="_blank" rel="noopener" href="<%- url_for(theme.social_links[link]) %>">
-            <i class="fab fa-<%= link %>"></i><!--
-      ---></a><!--
-    ---><% } %><!--
-    ---><%= ( nb_links > 0 && i < nb_links-1 ?
-            ( i == nb_links-2 ? ' '+__('index.enum_and')+' '
-            : __('index.enum_comma')+' ' )
-            : '.' ) %>
-        <% i+=1 %>
-      <% } %>
-    </p>
-  <% } %>
 </section>
+
+
+<% if (site.data.projects) { %>
+  <section id="projects">
+    <span class="h1"><a href="<%- url_for(theme.projects_url) %>"><%= __('index.projects') %></a></span>
+    <ul class="project-list">
+      <% for(var obj in site.data.projects){ %>
+        <li class="project-item">
+          <a href="<%= site.data.projects[obj].code %>"><%= site.data.projects[obj].name %></a>: <%- markdown(site.data.projects[obj].description) %>
+        </li>
+      <% } %>
+    </ul>
+  </section>
+  <% } %>
+
 
 <section id="writing">
   <span class="h1"><a href="<%- url_for(theme.nav.articles) %>"><%= __('index.articles') %></a></span>
@@ -59,15 +48,33 @@
   <% } %>
 </section>
 
-<% if (site.data.projects) { %>
-<section id="projects">
-  <span class="h1"><a href="<%- url_for(theme.projects_url) %>"><%= __('index.projects') %></a></span>
-  <ul class="project-list">
-    <% for(var obj in site.data.projects){ %>
-      <li class="project-item">
-        <a href="<%= site.data.projects[obj].url %>"><%= site.data.projects[obj].name %></a>: <%- markdown(site.data.projects[obj].desc) %>
-      </li>
+
+<% if (theme.social_links) { %>
+  <section id="social">
+   <p>
+    <%= __('index.find_me_on') %>
+    <% var nb_links = Object.keys(theme.social_links).length %>
+    <% var i = 0 %>
+    <% for(var link in theme.social_links) { %>
+      <% if (link == 'mail') { %>
+        <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
+          <i class="fas fa-envelope"></i><!--
+    ---></a>
+      <% } else if (link == 'rss') { %>
+        <a class="icon" target="_blank" rel="noopener" href="<%- theme.social_links[link] %>">
+          <i class="fas fa-rss"></i>
+        </a>
+      <% } else { %>
+        <a class="icon" target="_blank" rel="noopener" href="<%- url_for(theme.social_links[link]) %>">
+          <i class="fab fa-<%= link %>"></i><!--
+    ---></a><!--
+  ---><% } %><!--
+  ---><%= ( nb_links > 0 && i < nb_links-1 ?
+          ( i == nb_links-2 ? ' '+__('index.enum_and')+' '
+          : __('index.enum_comma')+' ' )
+          : '.' ) %>
+      <% i+=1 %>
     <% } %>
-  </ul>
-</section>
+    </p>
+  </section>
 <% } %>
